// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseQUery all()  1`] = `
Array [
  Checklist {
    "id": 1,
    "name": "Onboarding Rest",
  },
  Checklist {
    "id": 2,
    "name": "Project Audit Rest",
  },
  Checklist {
    "id": 3,
    "name": "QA Checklist Rest",
  },
]
`;

exports[`BaseQUery find()  1`] = `
Checklist {
  "id": 1,
  "name": "Onboarding Rest",
}
`;

exports[`BaseQUery includes()  1`] = `
Array [
  Checklist {
    "id": 1,
    "name": "Onboarding Rest",
    "tasks": Array [
      Checklist {
        "description": "Onboarding REST 1",
        "id": 1,
      },
      Checklist {
        "description": "Onboarding REST 2",
        "id": 2,
      },
    ],
  },
  Checklist {
    "id": 2,
    "name": "Project Audit Rest",
    "tasks": Array [
      Checklist {
        "description": "Project Audit Rest 3",
        "id": 3,
      },
      Checklist {
        "description": "Project Audit Rest 4",
        "id": 4,
      },
    ],
  },
  Checklist {
    "id": 3,
    "name": "QA Checklist Rest",
    "tasks": Array [
      Checklist {
        "description": "QA Checklist Rest 5",
        "id": 5,
      },
      Checklist {
        "description": "QA Checklist Rest 6",
        "id": 6,
      },
    ],
  },
]
`;

exports[`BaseQUery where()  1`] = `
Checklist {
  "id": 2,
  "name": "Project Audit Rest",
}
`;
